// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Widget /> should not render when the \`type\` prop is invalid 1`] = `
<Widget
  component={null}
  config={
    {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "some_widget",
      "width": 12,
    }
  }
/>
`;

exports[`<Widget /> should render an image widget 1`] = `
<Widget
  component={[Function]}
  config={
    {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "@shopgate/commerce-widgets/image",
      "width": 12,
    }
  }
>
  <GridItemWithStyles
    className="common__widgets__widget css-11tky1j"
    component="div"
  >
    <GridItem
      className="tss-sd75mx-GridItem-root common__widgets__widget css-11tky1j"
      classes={
        {
          "root": "tss-sd75mx-GridItem-root",
        }
      }
      component="div"
      grow={0}
      shrink={1}
    >
      <div
        className="tss-sd75mx-GridItem-root common__widgets__widget css-11tky1j tss-sd75mx-GridItem-root common__widgets__widget css-11tky1j"
      >
        <div>
          <Suspense
            fallback={<Loading />}
          >
            <MyComponent
              ratio={
                [
                  12,
                  6,
                ]
              }
            >
              <div />
            </MyComponent>
          </Suspense>
        </div>
      </div>
    </GridItem>
  </GridItemWithStyles>
</Widget>
`;

exports[`<Widget /> should render an image widget with offset 1`] = `
<Widget
  cellSize={100}
  component={[Function]}
  config={
    {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "@shopgate/commerce-widgets/image",
      "width": 6,
    }
  }
>
  <GridItemWithStyles
    className="common__widgets__widget css-1fy9kc8"
    component="div"
  >
    <GridItem
      className="tss-sd75mx-GridItem-root common__widgets__widget css-1fy9kc8"
      classes={
        {
          "root": "tss-sd75mx-GridItem-root",
        }
      }
      component="div"
      grow={0}
      shrink={1}
    >
      <div
        className="tss-sd75mx-GridItem-root common__widgets__widget css-1fy9kc8 tss-sd75mx-GridItem-root common__widgets__widget css-1fy9kc8"
      >
        <div>
          <Suspense
            fallback={<Loading />}
          >
            <MyComponent
              ratio={
                [
                  6,
                  6,
                ]
              }
            >
              <div />
            </MyComponent>
          </Suspense>
        </div>
      </div>
    </GridItem>
  </GridItemWithStyles>
</Widget>
`;
